--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,7 +2,7 @@
 
 version: 2
 updates:
-  - package-ecosystem: "rust" 
+  - package-ecosystem: "github-actions" 
     directory: "/" 
     schedule:
       interval: "weekly"
